--- a/app/views/kfaninc/print.html.erb
+++ b/app/views/kfaninc/print.html.erb
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %> 
-	<% @title = "KFan > About > UI/UX" %></head>
+	<% @title = "KFan > About > Print" %></head>
 </head>
 <body>
 <div id="overlay-contact"></div>
@@ -20,7 +20,7 @@
 			<ul id="image_slider">
             <li class="graghics">
               <div class="narrative">
-	    		<h3>UI / UX</h3>
+	    		<h3>Print</h3>
 				<p>All of these have been turned into reality. I believe physical objects can render user experience better than anything else. The beauty of design is highlighted at the first sight of unpackaging</p>
     		  </div>
     		</li>
