--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -16,6 +16,7 @@
 <%= render 'layouts/nav' %>
 <%= render 'layouts/contact' %>
 <%= render 'layouts/utilities' %>
+<%= render 'layouts/instruction' %>
     
 <section class="cd-horizontal-timeline">
 	<div class="timeline">
@@ -155,6 +156,7 @@ Thanks for writing.  It was good to hear from you!
 		</ol>
 	</div>
 </section>
+
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
