--- a/app/views/layouts/_utilities.html.erb
+++ b/app/views/layouts/_utilities.html.erb
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<div class="utilities-wrapper">
 <div class="notes-wrapper">
 	<div class="saver-wrap" contenteditable="false">
 		<div class="notes-dot" contenteditable="false"></div>
@@ -108,6 +109,7 @@
 		</p>
 </div>
 </blockquote> 
+</div>
 </div>
 <script>!function(d,s,id){
 	var wcode;
