Improved contact page and added contents

--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -33,7 +33,9 @@
 					<li><a href="#0" data-date="14/03/2012">March 2012</a></li>
 					<li><a href="#0" data-date="25/12/2012">25 Dec</a></li>
 					<li><a href="#0" data-date="31/10/2013">31 Oct 2013</a></li>
-					<li><a href="#0" data-date="23/01/2015" class="selected">23 Jan 2015</a></li>
+					<li><a href="#0" data-date="23/01/2015">23 Jan 2015</a></li>
+					<li><a href="#0" data-date="20/03/2016" class="selected">20 Mar 2016</a></li>
+
 				</ol>
 
 				<span class="filling-line" aria-hidden="true"></span>
@@ -93,7 +95,7 @@
 				<em>June 27th, 2010</em>
 				<p>	
 					A hot summer in Ithaca, NY, with the big clock tower chimes every hour. I spent my first summer in the US. and took English for Academic Purposes and Introductory to Economics. Thank you Big Red and professor Kris Kershaw. 
-				<em id="kris">
+				<em class="letters">
 				<br>
 					Dear Kevin,
 				</br>
@@ -131,7 +133,7 @@ Thanks for writing.  It was good to hear from you!
 				<h2>Barrow, Alaska</h2>
 				<em>December 25th, 2012</em>
 				<p>	
-					Spent my one and only Inupiat Christmas at the Top of World. Barrow will always have a special place in my heart because of Abra Patkotak and Belinda Michelle Glastetter. Btw, northern lights are breath-taking and breath-freezing at the same time
+					Spent my one and only Inupiaq Christmas at the Top of World. Barrow will always have a special place in my heart because of Abra Patkotak and Belinda Michelle Glastetter. Btw, northern lights are breath-taking and breath-freezing at the same time
 				</p>
 			</li>
 
@@ -143,14 +145,34 @@ Thanks for writing.  It was good to hear from you!
 				</p>
 			</li>
 
-			<li class="selected" data-date="23/01/2015">
+			<li data-date="23/01/2015">
 				<h2>Change of Major</h2>
 				<em>January 23rd, 2015</em>
 				<p>	
 					The day that totally changed the course of my life
 				<br></br>
-				<p>Major: Electrical Engineering</p>
+				<p>Major: Electrical Engineering and Computer Engineering</p>
 				<p>Minor: Italian</p>	
+				</p>
+			</li>
+			
+			<li class="selected" data-date="20/03/2016">
+				<h2>UCLA Technical Management Program</h2>
+				<em>March 20th, 2016</em>
+				<p>	
+					One of the most best experiences I've ever had. I learned how to be both right and effective at the same time
+				<br></br>
+				<p>Thank you all the knowledgeable instructors and amazing participants!</p>
+				<em class="letters">Classes I took:
+				<br>
+				Transitioning From a Technical to a Management Position. Led by Chris Christensen, MS, MBA, of Christensen Associates, Inc
+				<br>
+				Maximizing Your Team’s Performance. Led by Denise Wolfe, PhD, Legacy in Action, Inc
+				<br>
+				Emotional Intelligence: Leading and Working in a Diverse Workforce. Led by Jorge Cherbosque, PhD, Emotional Intelligence and Diversity Institute
+				</em>	
+				<em class="letters">Special thanks: Joon Lee, Bill Goodin, Chris Christensen, Denise Wolfe, Jorge Cherbosque, Terry Schmidt, Derek Dupras, Jo Sunga, Dan Nakahara, Adam Valdez, Jason Zhang, James Burt, Ann Marie Ryder, Peter Tang, John Mack, Andrew Michels, Casey Rising, Charlie Wu, and Anne Benz
+
 				</p>
 			</li>
 		</ol>
