--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -1,8 +1,10 @@
+<%= stylesheet_link_tag "hover-min", media: "all", "data-turbolinks-track" => true %>  	
+
 <nav class="social">
-      <a href="https://github.com/kevinfan23" id="rainbow" target="_blank"><span class="entypo-github"></span></a>
-      <a href="mailto:kevinfan23@ucla.edu"><span class="entypo-mail"></span></a>
-      <a href="https://www.facebook.com/kevin.fan.984" target="_blank"><span class="entypo-facebook"></span></a>
-      <a href="https://www.instagram.com/kfan23/" target="_blank"><span class="entypo-instagrem"></span></a>
+      <a href="https://github.com/kevinfan23" class="hvr-underline-reveal" id="hvr-github" target="_blank"><span class="entypo-github"></span></a>
+      <a href="mailto:kevinfan23@ucla.edu" class="hvr-underline-reveal"><span class="entypo-mail"></span></a>
+      <a href="https://www.facebook.com/kevin.fan.984" class="hvr-underline-reveal" target="_blank"><span class="entypo-facebook"></span></a>
+      <a href="https://www.instagram.com/kfan23/" class="hvr-underline-reveal" target="_blank"><span class="entypo-instagrem"></span></a>
 </nav>
 
 <div class="content">
