--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -403,10 +403,6 @@ background: linear-gradient(to left, rgba(230, 218, 218, 0.9) , rgba(39, 64, 70,
 
 
 /* Social media & contact effects */
-#rainbow:hover {
-	background: #000000 !important;
-}
-
 nav.social {
   position: absolute;
   width: 400px;
@@ -422,50 +418,49 @@ nav.social {
 nav.social a {
   position: absolute;
   width: 25%;
-  height: 10px;
+  height: 90px;
   width: 100px;
   color: #fff;
-  font-size: 30px;
+  font-size: 32px;
   line-height: 90px;
   text-decoration: none;
-  transition: all 200ms ease-in-out 40ms;
   transform-origin: bottom;
 }
 
-nav.social span {
-  opacity: 0;
-  height: 0;
-  transition: all 200ms ease-in-out 30ms;
-}
-
-nav.social a:hover > span {
-  transition-delay: 200ms;
-  opacity: 1;
-  height: initial;
-}
-
-nav.social a:hover {
-  height: 90px;
-}
-
 nav.social a:nth-child(1) {
-  background-color: #000000;
   left: 0;
+  color: #000000;
+  
+  &:hover {
+	color: #fff;
+  }
 }
 
 nav.social a:nth-child(2) {
-  background-color: #dd4b39;
   left: 25%;
+  color: #dd4b39;
+  
+  &:hover {
+	color: #fff;
+  }
 }
 
 nav.social a:nth-child(3) {
-  background-color: #45619D;
   left: 50%;
+  color: #45619D;
+  
+  &:hover {
+	color: #fff;
+  }
 }
 
 nav.social a:nth-child(4) {
-  background-color: #004879;
   left: 75%;
+  color: #004879;
+  
+  &:hover {
+	color: #fff;
+  }
 }
 
 /* Clock */
@@ -1490,9 +1485,9 @@ svg {
 	text-decoration: underline;
 }
 
-#kris {
+.letters {
 	font-size: 0.8rem;
-	color: #000000;
+	color: #000000 !important;
 }
 
 /* About page toggle search */
