Update font size

--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -182,9 +182,9 @@ Thanks for writing.  It was good to hear from you!
 
 <section class="mobile">
 	<div class="mobile-container">
-		<h2>Hi! My name is Zixuan(Kevin) Fan，<span class="chinese">范子暄</span>. Welcome to my personal page! If you want to learn more about me, please swipe down/click on the arrow below</h2>
+		<h2>Hi! My name is Zixuan(Kevin) Fan, <span class="chinese">范子暄</span>. Welcome to my personal page! If you want to learn more about me, please swipe down/click on the arrow below</h2>
 		<br>
-			<h2>// Or, you can <%= link_to "View my Résumé", "http://kfaninc.com" %></h2>
+			<h2>// Or, you can <a href="./images/CV.pdf">View my Résumé</a></h2>
 		<ul class="mobile-social">
 			<li><a href="https://github.com/kevinfan23" target="_blank"><span class="entypo-github hvr-grow-rotate"></span></a></li>
 			<li><a href="https://www.linkedin.com/in/zixuan-kevin-fan-85492226" target="_blank"><span class="entypo-linkedin hvr-grow-rotate"></span></a></li>
