--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1510,10 +1510,11 @@ svg {
 
 /* Home Page Mobile Style */
 .mobile {
+	position: relative;
     width:100%;
     height:100vh;
-    top:0px;
-    left:0px;
+    top: 0;
+    left:0;
 	background: linear-gradient(253deg, #0cc898, #1797d2, #864fe1);
     background-size: 300% 300%;
     -webkit-animation: Background 25s ease infinite;
@@ -1523,8 +1524,8 @@ svg {
 
 .mobile-container {
   width: 90%;
-  position: absolute;
-  top: 40%;
+  position: relative;
+  top: 40vh;
   left:50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
@@ -1532,7 +1533,7 @@ svg {
   
    h2 {
       font-family: 'Lato', serif;
-      font-size: 2rem;
+      font-size: 3.5vh;
       font-weight: 300;
       letter-spacing: 1px;
       line-height: 3rem;
@@ -1550,7 +1551,7 @@ svg {
 
 .mobile-social {
   position: relative;
-  top: 100px;
+  top: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1571,7 +1572,7 @@ ul.mobile-social a {
 
 #arrow-down {
   position: absolute;
-  top: 95%;
+  bottom: 0;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
