Fixed font unit

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1533,7 +1533,7 @@ svg {
   
    h2 {
       font-family: 'Lato', serif;
-      font-size: 3.5vh;
+      font-size: 3.5vmax;
       font-weight: 300;
       letter-spacing: 1px;
       line-height: 3rem;
