--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,10 @@
     p.url {
 	    display: none;
     }
+    
+    .mobile {
+	    display: block !important;
+    }
 }
 
 /* Include social media icons */
@@ -1510,6 +1514,7 @@ svg {
 
 /* Home Page Mobile Style */
 .mobile {
+	display: none;
 	position: relative;
     width:100%;
     height:100vh;
