--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -195,7 +195,7 @@ Thanks for writing.  It was good to hear from you!
 	</div>
 	<a href="#" id="arrow-down"><%=image_tag "arrow-down.png", class: "floating"%></a>
 </section>
-
+<%= javascript_include_tag "mobile", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
