--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -425,6 +425,12 @@ nav.social {
   transform: translate(-50%, -50%);
 }
 
+@keyframes delay {
+	0% {height: 10px;}
+	50% {height: 90px;}
+	100% {height: 10px;}
+}
+
 nav.social a {
   position: absolute;
   width: 20%;
@@ -436,6 +442,12 @@ nav.social a {
   text-decoration: none;
   transition: all 200ms ease-in-out 40ms;
   transform-origin: bottom;
+}
+
+@keyframes display {
+	0% {opacity: 0;}
+	50% {opacity: 1;}
+	100% {opacity: 0;}
 }
 
 nav.social span {
@@ -460,9 +472,16 @@ nav.social a:hover {
   height: 90px;
 }
 
+#rainbow span {
+  animation: display 2s ease-in-out;
+  animation-delay: 1.5s;
+}
+
 nav.social a:nth-child(1) {
   background-color: #000000;
   left: 0;
+  animation: delay 2s ease-in-out;
+  animation-delay: 1.5s;
 }
 
 nav.social a:nth-child(2) {
