--- a/app/views/layouts/_header_white.html.erb
+++ b/app/views/layouts/_header_white.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" %>
+
 <ul class="navbar" id="navbar-white">
 <li><a href="#" id="contact">Contact</a></li>
 <%= link_to image_tag("close.png", height: "30"), about_path, :id => "close"%>
