--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -182,7 +182,7 @@ Thanks for writing.  It was good to hear from you!
 
 <section class="mobile">
 	<div class="mobile-container">
-		<h2>Hi! My name is Zixuan(Kevin) Fan, <span class="chinese">范子暄</span>. Welcome to my personal page! If you want to learn more about me, please swipe down/click on the arrow below</h2>
+		<h2>Hi! My name is Zixuan(Kevin) Fan, <span class="chinese">范子暄</span>. Welcome to my personal page! If you want to learn more about me, please swipe up/click on the arrow below</h2>
 		<br>
 			<h2>// Or, you can <%= link_to "View my Résumé", asset_path("CV.pdf")%></h2>
 		<ul class="mobile-social">
@@ -193,7 +193,7 @@ Thanks for writing.  It was good to hear from you!
 			<li><a href="https://www.instagram.com/kfan23/" target="_blank"><span class="entypo-instagrem hvr-grow-rotate"></span></a></li>
 		</ul>
 	</div>
-	<a href="#" id="arrow-down"><%=image_tag "arrow-down.png", class: "floating"%></a>
+	<a href="http://kfaninc.com/mobile" id="arrow-down"><%=image_tag "arrow-down.png", class: "floating"%></a>
 </section>
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
