--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1520,11 +1520,12 @@ ul.mobile-social a {
 	}
 	
 	h4 {
+		position: absolute;
 		font-family: 'Lato', sans-serif;
-		font-size: 28px;
+		font-size: 24px;
 		font-weight: 300;
 		margin-top: 100px;
-		margin-left: 30vw;
+		margin-left: 35vw;
 	}
 }
 
@@ -1548,7 +1549,7 @@ ul.mobile-social a {
 	
 	img {
 		margin-top: 80px;
-		margin-left: 5vw;
+		margin-left: 25px;
 	}
 }
 
@@ -1556,7 +1557,7 @@ ul.mobile-social a {
 	background: #B9E3F3;
 	
 	img {
-		margin-left:1vw;
+		margin-left:0;
 	}
 }
 
@@ -1565,7 +1566,7 @@ ul.mobile-social a {
 	
 	img {
 		margin-top: 50px;
-		margin-left: 4vw;
+		margin-left: 13px;
 	}
 }
 
@@ -1574,7 +1575,7 @@ ul.mobile-social a {
 	
 	img {
 		margin-top: 70px;
-		margin-left: 8vw;
+		margin-left: 35px;
 	}
 }
 
@@ -1583,7 +1584,7 @@ ul.mobile-social a {
 	
 	img {
 		margin-top: 60px;
-		margin-left: 4vw;
+		margin-left: 15px;
 	}
 }
 
